zerOS/src/kernel/memory/allocators/bindings/region.rs

/* automatically generated by rust-bindgen 0.71.1 */

pub type zerOS_byte_t = u8;
impl zerOS_allocation_strategy
{
	pub const zerOS_ALLOC_STRAT_DEFAULT: zerOS_allocation_strategy = zerOS_allocation_strategy(0);
}
impl zerOS_allocation_strategy
{
	pub const zerOS_ALLOC_STRAT_BEST_FIT: zerOS_allocation_strategy = zerOS_allocation_strategy(1);
}
impl zerOS_allocation_strategy
{
	pub const zerOS_ALLOC_STRAT_FIRST_FIT: zerOS_allocation_strategy = zerOS_allocation_strategy(2);
}
#[repr(transparent)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub struct zerOS_allocation_strategy(pub u8);
pub type zerOS_region_reclaim_hook_t = ::core::option::Option<
	unsafe extern "C" fn(arg1: *mut zerOS_byte_t, arg2: usize, arg3: bool) -> bool
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zerOS_region_allocator
{
	_unused: [u8; 0]
}
unsafe extern "C" {
	pub fn zerOS_region_allocator_create(
		region: *mut zerOS_byte_t,
		region_size: usize,
		static_mem: bool,
		authorize_reclaim: bool,
		preferred: zerOS_allocation_strategy,
		hook: zerOS_region_reclaim_hook_t
	) -> *mut zerOS_region_allocator;
}
unsafe extern "C" {
	pub fn zerOS_region_allocator_alloc(
		allocator: *mut zerOS_region_allocator,
		size: usize,
		align: usize,
		strategy: zerOS_allocation_strategy
	) -> *mut ::core::ffi::c_void;
}
unsafe extern "C" {
	pub fn zerOS_region_allocator_realloc(
		allocator: *mut zerOS_region_allocator,
		size: usize,
		align: usize,
		strategy: zerOS_allocation_strategy
	) -> *mut ::core::ffi::c_void;
}
unsafe extern "C" {
	pub fn zerOS_region_allocator_dealloc(
		allocator: *mut zerOS_region_allocator,
		ptr: *mut ::core::ffi::c_void
	);
}
